--- a/templates/word_drill.html
+++ b/templates/word_drill.html
@@ -26,7 +26,7 @@
         align-items: center;
         /* font-size: 2em; */
         text-align: center;
-        background: #f0f0f0;
+        background: whitesmoke;
         border: 1px solid #ccc;
         border-radius: 10px;
         transition: transform 0.5s ease-in-out;
@@ -48,7 +48,6 @@
 
     .graystatus {
         opacity: 0;
-        /* color:#f0f0f0 ;; */
     }
 
     #hoverMenu {
