--- a/templates/memo_review.html
+++ b/templates/memo_review.html
@@ -73,6 +73,11 @@
         display: none;
     }
     .upperpart {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         font-size: 1.5rem;
         padding: 1rem;
     }
