--- a/templates/word_review.html
+++ b/templates/word_review.html
@@ -100,7 +100,11 @@
     a.mobile-hide {
         display: none;
     }
+    
     .upperpart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 4rem;
     }
     .underpart {
