--- a/templates/mc/mc_review.html
+++ b/templates/mc/mc_review.html
@@ -101,6 +101,9 @@
         display: none;
     }
     .upperpart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 4rem;
     }
     .underpart {
