--- a/templates/memo_drill.html
+++ b/templates/memo_drill.html
@@ -73,6 +73,9 @@
         display: none;
     }
     .upperpart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 1.5rem;
         padding: 1rem;
     }
