--- a/templates/word_drill.html
+++ b/templates/word_drill.html
@@ -38,12 +38,12 @@
     .upperpart {
         align-content: center;
         background: #f0f0f0;
-        font-size: 10em; 
+        font-size: 10rem; 
     }
 
     .underpart {
         background: whitesmoke;
-        font-size: 2em; 
+        font-size: 2rem; 
     }
 
     .graystatus {
@@ -98,8 +98,12 @@
     a.mobile-hide {
         display: none;
     }
+
     .upperpart {
-        font-size: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 4em;
     }
     .underpart {
         font-size: 1.5rem;
