adding password reset feature

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -56,8 +56,8 @@
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
         role="button" aria-disabled="true" style="margin-right: 10px; margin-bottom:2rem;">sign up</a>
-        <!-- <a href ="{% url '' %}" class="btn btn-secondary" 
-        role="button" aria-disabled="true" style="margin-left: 10px; margin-bottom:2rem;">パスワード再設定</a> -->
+        <a href ="{% url 'password_reset' %}" class="btn btn-secondary" 
+        role="button" aria-disabled="true" style="margin-left: 10px; margin-bottom:2rem;">パスワード再設定</a>
     </div>
     <form method="post" style="align-items: flex-start; margin-left: 4rem;">
     <h5 style="margin-bottom: 1rem;"> ログイン</h5>
