--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -55,7 +55,9 @@
     <h1 style="margin-bottom: 1rem; margin-top: 15%; margin-left: 1rem;"> Ebing House 英単語帳＆メモ帳</h1>
     <div style="display: flex; justify-content: flex-end; width: 100%;">
         <a href ="{% url 'accounts:signup' %}" class="btn btn-secondary" 
-        role="button" aria-disabled="true" style=" margin-bottom:2rem;">sign up</a>
+        role="button" aria-disabled="true" style="margin-right: 10px; margin-bottom:2rem;">sign up</a>
+        <a href ="{% url 'password_reset' %}" class="btn btn-secondary" 
+        role="button" aria-disabled="true" style="margin-left: 10px; margin-bottom:2rem;">パスワード再設定</a>
     </div>
     <form method="post" style="align-items: flex-start; margin-left: 4rem;">
     <h5 style="margin-bottom: 1rem;"> ログイン</h5>
