--- a/static/style2.css
+++ b/static/style2.css
@@ -4,13 +4,14 @@ body, html {
     margin: 0; /* マージンをリセット */
     display: flex;
     justify-content: center; /* 横方向に中央揃え */
-    align-items: center; /* 縦方向に中央揃え */
+    align-items: flex-start; /* 縦方向の中央揃えを解除 */
+    overflow: auto; /* スクロールを有効にする */
 }
 
 .container {
     width: 100%; /* コンテナの幅を100%に設定 */
-    max-width: 600px; /* 最大幅を設定 */
-    padding: 20px; /* 内側の余白を設定 */
+    max-width: 800px; /* 最大幅を設定 */
+    padding: 2%; /* 内側の余白を設定 */
     box-sizing: border-box; /* 幅と高さにパディングとボーダーを含む */
     /* border: 1px solid #ccc; /* 枠線を設定 */
     /* border-radius: 8px; /* 角を丸める */
