--- a/templates/memo_drill.html
+++ b/templates/memo_drill.html
@@ -24,9 +24,9 @@
         display: block;
         justify-content: center;
         align-items: center;
-        font-size: 2em;
+        /* font-size: 2em; */
         text-align: center;
-        background: #f0f0f0;
+        background: whitesmoke;
         border: 1px solid #ccc;
         border-radius: 10px;
         transition: transform 0.5s ease-in-out;
@@ -38,8 +38,8 @@
     .upperpart {
         align-content: center;
         background: #f0f0f0;
-        font-size: 1em; 
-        padding: 3em;
+        font-size: 2rem; 
+        padding: 3rem;
     }
 
     .no-data {
@@ -52,6 +52,34 @@
         font-weight: bold;
         text-align: center;
     }
+
+    @media (max-width: 576px){
+     #hoverMenu {
+        position: fixed; /* 最上部に固定 */
+        top: 0;          /* 画面の一番上に */
+        left: 0;         /* 左に固定 */
+        width: 100%;     /* 幅を100%に */
+        height: 6%;    /* 高さは自動調整 */
+        background-color: #333;
+    }
+    #hoverMenu a {
+        display: inline-block;
+        width: auto;
+        margin-right: 15px;
+        font-size: 1.5rem;
+        margin-bottom: 0px ;
+    }
+    a.mobile-hide {
+        display: none;
+    }
+    .upperpart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+    }
+  }
 
 </style>
 
@@ -85,12 +113,14 @@
     document.addEventListener('DOMContentLoaded', () => {
         const hoverMenu = document.getElementById('hoverMenu');
         
+        if (window.innerWidth > 567){
         window.addEventListener('mousemove', function(e) {
             if (e.clientX < 100) {
                 hoverMenu.style.width = '100px'; 
             } else {
                 hoverMenu.style.width = '0';             }
         });
+    }
     });
 </script>
 
@@ -98,7 +128,7 @@
 <div id="hoverMenu">
     <a href="/" >TOP</a>
     <a href="/wlist/list_memo" >メモ帳編集</a>
-    <a href="/accounts/login">LOG OUT</a>
+    <a href="/accounts/login" class="mobile-hide">LOG OUT</a>
 </div>
 
 
