--- a/templates/word_record.html
+++ b/templates/word_record.html
@@ -4,6 +4,43 @@
 {% block head %}
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
+<style>
+  body, html {
+      align-items: center;
+      overflow-x: auto;
+  }
+  
+  @media (max-width: 576px){
+     .form {
+     max-width:100% ;
+     min-width: 300px;
+     }
+
+     #hoverMenu {
+        position: fixed; /* 最上部に固定 */
+        top: 0;          /* 画面の一番上に */
+        left: 0;         /* 左に固定 */
+        width: 100%;     /* 幅を100%に */
+        height: 6%;    /* 高さは自動調整 */
+        background-color: #333;
+    }
+
+    /* メニュー内のリンクを横並びに */
+    #hoverMenu a {
+        display: inline-block;
+        width: auto;
+        margin-right: 15px;
+        font-size: 1.5rem;
+        margin-bottom: 0px ;
+    }
+
+    .mobile-hide, a.mobile-hide {
+        display: none;
+    }
+  }
+    
+  </style>
+
 {% endblock head %}
 
 {% block content %}
@@ -13,17 +50,17 @@
 <form action='' method='POST' style="margin-bottom: 50px; display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
     {% csrf_token %}
     <label style="margin-bottom: 10px;">New Word:</label>
-    <input type="text" name="{{ form.word.name }}" value="{{ form.word.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
+    <input required type="text" name="{{ form.word.name }}" value="{{ form.word.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
     <input type="submit" value="create" style="width: 80px; height: 30px; font-size: 16px;">
 </form>
 <!-- <ul style="display: flex; flex-direction: column; align-items: flex-start; width: 800px;"> -->
 
   <div style="width: 100%; display: flex; flex-direction: column; align-items: flex-start;">
-  {% for record in today_records %}
+  {% for record in object_list %}
   <ul style="width: 100%; display: flex; justify-content: space-between;">
       <li style="display: flex; width: 100%;">
         <span style="flex: 1;">{{ record.word }}</span>
-        <span style="flex: 1;">{{ record.mean1 }}</span>
+        <span style="flex: 1;" class="mobile-hide">{{ record.mean1 }}</span>
         <span style="flex: 7;">{{ record.mean2 }}</span>
       </li>
   </ul>
@@ -38,7 +75,7 @@
 <div id="hoverMenu">
   <a href="/" >TOP</a>
   <a href="/wlist/list_word" >英単語帳編集</a>
-  <a href="/accounts/login">LOG OUT</a>
+  <a href="/accounts/login" class="mobile-hide">LOG OUT</a>
 </div>
 
 </div>
@@ -47,12 +84,14 @@
   document.addEventListener('DOMContentLoaded', () => {
       const hoverMenu = document.getElementById('hoverMenu');
       
+      if (window.innerWidth >576){
       window.addEventListener('mousemove', function(e) {
           if (e.clientX < 100) {
               hoverMenu.style.width = '100px'; 
           } else {
               hoverMenu.style.width = '0';             }
       });
+    }
   });
 
 </script>
