--- a/templates/home.html
+++ b/templates/home.html
@@ -223,6 +223,8 @@
                 <h3>英単語帳</h3>
                 <a href ="{% url 'wlist:word_record' %}" class="btn btn-success mb-2" role="button">今日のインプット</a>
                 <a href ="{% url 'wlist:word_review' %}" class="btn btn-success mb-2" role="button">復習（1,7,28日前）</a>
+                <a href ="{% url 'wlist:word_check_drill' %}" class="btn btn-success mb-2" role="button">チェックドリル</a>
+
             </div>  
             <div id="menu2" style=" border:8px solid #00bfff; background-color: lightblue;">
                 <h3>メモ帳</h3>
@@ -233,6 +235,7 @@
                 <h3>メモ帳２</h3>
                 <a href ="{% url 'wlist:mc_record' %}" class="btn btn-light mb-2" role="button">今日のインプット</a>
                 <a href ="{% url 'wlist:mc_review' %}" class="btn btn-light mb-2" role="button">復習（1,7,28日前）</a>
+                <a href ="{% url 'wlist:mc_all' %}" class="btn btn-light mb-2" role="button"> ＡＬＬ </a>
             </div> 
         </div>
     
