--- a/templates/word_update.html
+++ b/templates/word_update.html
@@ -34,7 +34,15 @@ body, html {
         <label for="mean2">詳細：</label>
         <textarea id="mean2" name="mean2" rows="4" cols="250" style="width: 100%;">{{ form.mean2.value }}</textarea>
      </p>
-     
+
+     <p>チェック：
+     <label>
+         <input type="radio" name="fusen" value="True" {% if form.fusen.value %}checked{% endif %}> Yes
+     </label>
+     <label>
+         <input type="radio" name="fusen" value="False" {% if not form.fusen.value %}checked{% endif %}> No
+     </label>
+   </p>
      <!-- <input type="text" name="{{ form.word.name }}" value="{{ form.word.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
      <input type="text" name="{{ form.mean1.name }}" value="{{ form.mean1.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
      <input type="text" name="{{ form.mean2.name }}" value="{{ form.mean2.value|default_if_none:'' }}" style="width: 100%; height: 45px; padding: 10px; font-size: 16px; margin-bottom: 10px;">
