--- a/templates/word_drill copy.html
+++ b/templates/word_drill copy.html
@@ -35,7 +35,7 @@
         display: none;
     }
 
-    /* .upperpart {
+    .upperpart {
         align-content: center;
         background: #f0f0f0;
         font-size: 10rem; 
@@ -48,59 +48,7 @@
 
     .graystatus {
         opacity: 0;
-    } */
-
-    .upperpart {
-        display: flex;
-        justify-content: center;
-        align-items: bottom;
-        /* align-content: center; */
-        background: whitesmoke;
-        /* background: #f0f0f0; */
-        font-size: 8em;
     }
-
-    .underpart {
-        font-size: 1.5rem;
-        background: #ececec;
-    }
-
-    .upperpart.p1{
-        height:30%;
-    }
-    .upperpart.p2{
-        height:30%;
-    }
-    .upperpart.p3{
-        height:30%;
-    }
-
-    .underpart.mean1.p1{
-        height:30%;
-    }
-    .underpart.mean1.p2{
-        height:67%;
-    }
-    .underpart.mean1.p3{
-        height:30%;
-        font-size: 2.5rem;
-    }
-
-    .underpart.mean2.p1{
-        height:30%;
-    }
-    .underpart.mean2.p2{
-        height:3%;
-    }
-    .underpart.mean2.p3{
-        height:30%;
-        font-size: 2.0rem;
-    }
-
-    .gray1,.gray2 {
-        /* opacity: 0; */
-        display: none;
-    } 
 
     #hoverMenu {
         position: fixed;
@@ -177,11 +125,6 @@
     }
     });
 
-    // const imagePath = "{% static 'images/test_image1.webp' %}";
-    // console.log(imagePath);
-
-    // const imgElement = document.getElementById('card-img');
-    // console.log('Image URL:', imgElement.src);
 </script>
 
 
@@ -191,25 +134,10 @@
 
 <div id="flashcard-container">
     {% for card in drill_records %}
-    <!-- <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
+    <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
         <div class = 'upperpart' style="height:60%;">{{ card.word }}</div>
         <div class = 'underpart graystatus' style="height:12%; align-content:center;">{{ card.mean1 }}</div>
         <div class = 'underpart graystatus' style="height:25%; align-content:top;">{{ card.mean2 }}</div>
-    </div> -->
-
-    <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
-        <div class = 'upperpart p1'>{{ card.word }}</div>
-        <div class = 'underpart mean1 p1' style="align-content:center;">
-            <span class="gray1">{{ card.mean1 }}</span>
-            {% if card.img %}
-            <img class="gray2" src="{{ card.img.url }}" style="height:100%;margin:auto;">
-            {% else %}
-            <img class="gray2" src="/media/images/default.webp" style="height:100%;margin:auto;">
-            {% endif %}
-        </div>
-            <div class = 'underpart mean2 p1' style="align-content:top;">
-            <span class ="gray1">{{ card.mean2 }}</span>
-        </div>
     </div>
 
     {% empty %}
@@ -223,7 +151,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'js/cardslide_word.js' %}"></script>
+<script src="{% static 'js/cardslide.js' %}"></script>
 
 
 
