--- a/templates/word_review copy.html
+++ b/templates/word_review copy.html
@@ -5,7 +5,6 @@
 <link href="{% static 'style2.css' %}" rel="stylesheet">
 
 <style>
-
     body {
         margin: 0;
         overflow: hidden;
@@ -36,10 +35,10 @@
         display: none;
     }
 
-    /* .upperpart {
+    .upperpart {
         align-content: center;
         background: #f0f0f0;
-        font-size: 10rem; 
+        font-size: 10rem;
     }
 
     .underpart {
@@ -49,60 +48,8 @@
 
     .graystatus {
         opacity: 0;
-    } */
-
-    .upperpart {
-        display: flex;
-        justify-content: center;
-        align-items: bottom;
-        /* align-content: center; */
-        background: whitesmoke;
-        /* background: #f0f0f0; */
-        font-size: 8em;
-        width:100%;
+        /* color:#f0f0f0 ;; */
     }
-
-    .underpart {
-        font-size: 1.5rem;
-        background: #ececec;
-    }
-
-    .upperpart.p1{
-        height:30%;
-    }
-    .upperpart.p2{
-        height:30%;
-    }
-    .upperpart.p3{
-        height:30%;
-    }
-
-    .underpart.mean1.p1{
-        height:30%;
-    }
-    .underpart.mean1.p2{
-        height:67%;
-    }
-    .underpart.mean1.p3{
-        height:30%;
-        font-size: 2.5rem;
-    }
-
-    .underpart.mean2.p1{
-        height:30%;
-    }
-    .underpart.mean2.p2{
-        height:3%;
-    }
-    .underpart.mean2.p3{
-        height:30%;
-        font-size: 2.0rem;
-    }
-
-    .gray1,.gray2 {
-        /* opacity: 0; */
-        display: none;
-    } 
 
     #hoverMenu {
         position: fixed;
@@ -129,10 +76,11 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        font-size: 24px; 
-        font-weight: bold; 
+        font-size: 24px;
+        font-weight: bold;
         text-align: center;
     }
+
     @media (max-width: 576px){
      #hoverMenu {
         position: fixed; /* 最上部に固定 */
@@ -152,15 +100,13 @@
     a.mobile-hide {
         display: none;
     }
-
+    
     .upperpart {
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 4em;
-        width:100%;
+        font-size: 4rem;
     }
-
     .underpart {
         font-size: 1.5rem;
     }
@@ -170,8 +116,8 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const hoverMenu = document.getElementById('hoverMenu');
-        
-        if (window.innerWidth > 576){   
+
+        if (window.innerWidth > 576){        
         window.addEventListener('mousemove', function(e) {
             if (e.clientX < 100) {
                 hoverMenu.style.width = '100px'; 
@@ -181,11 +127,6 @@
     }
     });
 
-    // const imagePath = "{% static 'images/test_image1.webp' %}";
-    // console.log(imagePath);
-
-    // const imgElement = document.getElementById('card-img');
-    // console.log('Image URL:', imgElement.src);
 </script>
 
 
@@ -194,57 +135,32 @@
 {% block content %}
 
 <div id="flashcard-container">
-    {% for card in drill_records %}
-    <!-- <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
+    {% for card in passed_records %}
+    <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
         <div class = 'upperpart' style="height:60%;">{{ card.word }}</div>
         <div class = 'underpart graystatus' style="height:12%; align-content:center;">{{ card.mean1 }}</div>
         <div class = 'underpart graystatus' style="height:25%; align-content:top;">{{ card.mean2 }}</div>
-    </div> -->
-
-    <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
-        <!-- <div class = 'upperpart p1'>
-            <div id = 'section2' style="flex:0 1 70%;background-color: #d1ecf1;">{{ card.word }}</div>
-        </div> -->
-
-        <div class="upperpart p1" style="width: 100%; text-align: center; position: relative;">
-            <div class="left-upper" style="z-index: 1; position: absolute; left: 0; top: 0; height: 100%; width: 50%;"></div>
-            <div class="right-upper" style="z-index: 1; position: absolute; right: 0; top: 0; height: 100%; width: 50%;"></div>
-            <span style="z-index: 2">{{card.word}}</span>
-        </div>
-
-        <div class = 'underpart mean1 p1' style="align-content:center;">
-            <span class="gray1">{{ card.mean1 }}</span>
-            <!-- {% if card.img %} -->
-            <img class="gray2" src="{{ card.img.url }}" style="height:100%;margin:auto;"
-            onerror="this.onerror=null; this.src='/media/images/default.webp';">
-            <!-- {% else %} -->
-            <!-- <img class="gray2" src="/media/images/default.webp" style="height:100%;margin:auto;">
-            {% endif %} -->
-        </div>
-            <div class = 'underpart mean2 p1' style="align-content:top;">
-            <span class ="gray1">{{ card.mean2 }}</span>
-        </div>
     </div>
 
     {% empty %}
     <div class="no-data">
         記録されている単語がありません。
         <div>
-            <a href="/" class="button">戻る</a>
+        <a href="/" class="button">戻る</a>
         </div>
     </div>
+
     {% endfor %}
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'js/cardslide_word.js' %}"></script>
-
-
+<script src="{% static 'js/cardslide.js' %}"></script>
 
 <div id="hoverMenu">
     <a href="/" >TOP</a>
     <a href="/wlist/list_word" >英単語帳編集</a>
     <a href="/accounts/login" class="mobile-hide">LOG OUT</a>
 </div>
+
 
 {% endblock content %}
