--- a/templates/word_review.html
+++ b/templates/word_review.html
@@ -63,6 +63,10 @@
     }
 
     .underpart {
+        display: flex;
+        justify-content: center;
+        align-items: bottom;
+        width:100%;
         font-size: 1.5rem;
         background: #ececec;
     }
@@ -133,6 +137,15 @@
         font-weight: bold; 
         text-align: center;
     }
+
+    .left-under, .right-under, .left-upper, .right-upper{
+        z-index: 2;
+        position: absolute;
+        top: 0;
+        height: 100%;
+        background-color: transparent;
+    }
+
     @media (max-width: 576px){
      #hoverMenu {
         position: fixed; /* 最上部に固定 */
@@ -207,22 +220,28 @@
         </div> -->
 
         <div class="upperpart p1" style="width: 100%; text-align: center; position: relative;">
-            <div class="left-upper" style="z-index: 1; position: absolute; left: 0; top: 0; height: 100%; width: 50%;"></div>
-            <div class="right-upper" style="z-index: 1; position: absolute; right: 0; top: 0; height: 100%; width: 50%;"></div>
-            <span style="z-index: 2">{{card.word}}</span>
+            <div class="left-upper" style="left: 0; width:35%; "></div>
+            <div class="right-upper" style="right: 0; width:65%; "></div>
+            <span style="z-index: 1">{{card.word}}</span>
         </div>
 
-        <div class = 'underpart mean1 p1' style="align-content:center;">
-            <span class="gray1">{{ card.mean1 }}</span>
+        <div class = 'underpart mean1 p1' style="align-content:center; width: 100%; text-align: center; position: relative;">
+            <div class="left-under" style="left: 0; width:35%; "></div>
+            <div class="right-under" style="right: 0; width:65%; "></div>
+
+            <span class="gray1" style="z-index: 1">{{ card.mean1 }}</span>
             <!-- {% if card.img %} -->
-            <img class="gray2" src="{{ card.img.url }}" style="height:100%;margin:auto;"
+            <img class="gray2" src="{{ card.img.url }}" style="height:100%; margin:auto; z-index: 1"
             onerror="this.onerror=null; this.src='/media/images/default.webp';">
             <!-- {% else %} -->
             <!-- <img class="gray2" src="/media/images/default.webp" style="height:100%;margin:auto;">
             {% endif %} -->
         </div>
-            <div class = 'underpart mean2 p1' style="align-content:top;">
-            <span class ="gray1">{{ card.mean2 }}</span>
+        <div class = 'underpart mean2 p1' style="align-content:top; width: 100%; text-align: center; position: relative;">
+            <div class="left-under"  style="left: 0; width:35%; "></div>
+            <div class="right-under" style="right: 0; width:65%; "></div>
+    
+            <span class ="gray1" style="z-index: 1">{{ card.mean2 }}</span>
         </div>
     </div>
 
