slight change and  update image-files

--- a/templates/word_review.html
+++ b/templates/word_review.html
@@ -207,7 +207,7 @@
 {% block content %}
 
 <div id="flashcard-container">
-    {% for card in drill_records %}
+    {% for card in passed_records %}
     <!-- <div class="flashcard {% if not forloop.first %}hidden{% endif %}" data-index="{{ forloop.counter0 }}">
         <div class = 'upperpart' style="height:60%;">{{ card.word }}</div>
         <div class = 'underpart graystatus' style="height:12%; align-content:center;">{{ card.mean1 }}</div>
