--- a/templates/memo_review.html
+++ b/templates/memo_review.html
@@ -114,7 +114,7 @@
     <div class="no-data">
         記録されているメモがありません。
         <div>
-        <a href="/" class="button">戻る</a>
+        <a href="/main" class="button">戻る</a>
         </div>
     </div>
     {% endfor %}
