--- a/templates/word_record.html
+++ b/templates/word_record.html
@@ -9,6 +9,16 @@
       align-items: center;
       overflow-x: auto;
   }
+
+  .center-container {
+  justify-content: center;
+  padding: "100px 20px 5px";
+}
+
+.flex-start-container {
+  justify-content: flex-start;
+  padding: 5%;
+}
   
   @media (max-width: 576px){
      .form {
@@ -46,7 +56,10 @@
 {% block content %}
 
 
-<div style="display: flex; flex-direction: column; align-items: center; width: 1000px;">
+<div class="{% if object_list|length > 7 %}flex-start-container{% else %}center-container{% endif %}"
+style="display: flex; flex-direction: column; align-items: center; width: 1000px; overflow-Y: auto;
+height:100vh;">
+
 <form action='' method='POST' style="margin-bottom: 50px; display: flex; flex-direction: column; align-items: flex-start; width: 300px;">
     {% csrf_token %}
     <label style="margin-bottom: 10px;">New Word:</label>
